View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027963 | Open CASCADE | OCCT:Coding | public | 2016-10-13 20:47 | 2016-12-09 16:38 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.1.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027963: Coding Rules - eliminate GCC compiler warnings -Wmissing-field-initializers in OSD_File.cxx | ||||
Description | Mingw-w64 generates a couple of new compiler warnings on current master indicating that LARGE_INTEGER variables are not properly initialized in OSD_File.cxx:occt\src\OSD\OSD_File.cxx: In member function 'void OSD_File::Rewind()': occt\src\OSD\OSD_File.cxx:909:39: warning: missing initializer for member '_LARGE_INTEGER::<anonymous struct>::HighPart' [-Wmissing-field-initializers] LARGE_INTEGER aDistanceToMove = { 0 }; ^ occt\src\OSD\OSD_File.cxx: In member function 'void OSD_File::ReadLine(TCollection_AsciiString&, Standard_Integer, Standard_Integer&)': occt\src\OSD\OSD_File.cxx:1144:45: warning: missing initializer for member '_LARGE_INTEGER::<anonymous struct>::HighPart' [-Wmissing-field-initializers] LARGE_INTEGER aDistanceToMove = { 0 }; ^ occt\src\OSD\OSD_File.cxx:1155:42: warning: missing initializer for member '_LARGE_INTEGER::<anonymous struct>::HighPart' [-Wmissing-field-initializers] LARGE_INTEGER aDistanceToMove = { 0 }; ^ occt\src\OSD\OSD_File.cxx: In member function 'void OSD_File::Seek(Standard_Integer, OSD_FromWhere)': occt\src\OSD\OSD_File.cxx:1334:56: warning: missing initializer for member '_LARGE_INTEGER::<anonymous struct>::HighPart' [-Wmissing-field-initializers] LARGE_INTEGER aDistanceToMove, aNewFilePointer = { 0 }; | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27963 has been created by kgv. SHA-1: 319e27909388687c029a8677865f737acbc2d33b Detailed log of new commits: Author: kgv Date: Thu Oct 13 21:09:51 2016 +0300 0027963: Coding Rules - eliminate GCC compiler warnings -Wmissing-field-initializers in OSD_File.cxx |
|
Please check compilation, regression testing is not needed. |
|
Branch CR27963 has been updated forcibly by apv. SHA-1: c8c250a59dd6f430fd65397a3bfe8ba133871081 |
|
Branch CR27963 has been rebased on the current master |
|
Dear BugMaster, Branch CR27963 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms. SHA-1: c8c250a59dd6f430fd65397a3bfe8ba133871081 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1132 |
|
Branch CR27963 has been deleted by kgv. SHA-1: c8c250a59dd6f430fd65397a3bfe8ba133871081 |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-10-13 20:47 | kgv | New Issue | |
2016-10-13 20:47 | kgv | Assigned To | => kgv |
2016-10-13 21:11 | git | Note Added: 0058696 | |
2016-10-13 21:12 | kgv | Note Added: 0058697 | |
2016-10-13 21:12 | kgv | Assigned To | kgv => bugmaster |
2016-10-13 21:12 | kgv | Severity | minor => trivial |
2016-10-13 21:12 | kgv | Status | new => resolved |
2016-10-13 21:12 | kgv | Status | resolved => reviewed |
2016-10-14 13:59 |
|
Assigned To | bugmaster => apv |
2016-10-14 14:24 | git | Note Added: 0058723 | |
2016-10-14 14:25 |
|
Note Added: 0058724 | |
2016-10-17 12:34 |
|
Assigned To | apv => kgv |
2016-10-17 12:34 |
|
Assigned To | kgv => apv |
2016-10-17 12:34 |
|
Test case number | => Not needed |
2016-10-17 12:35 |
|
Note Added: 0058775 | |
2016-10-17 12:35 |
|
Assigned To | apv => bugmaster |
2016-10-17 12:35 |
|
Status | reviewed => tested |
2016-10-21 11:25 |
|
Changeset attached | => occt master c8c250a5 |
2016-10-21 11:25 |
|
Assigned To | bugmaster => apv |
2016-10-21 11:25 |
|
Status | tested => verified |
2016-10-21 11:25 |
|
Resolution | open => fixed |
2016-10-28 21:42 | git | Note Added: 0059477 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |